@@ -51,20 +51,20 @@
 	</scm>
 
 	<properties>
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<maven.compiler.target>1.8</maven.compiler.target>
+		<maven.compiler.source>17</maven.compiler.source>
+		<maven.compiler.target>17</maven.compiler.target>
 		<encoding>UTF-8</encoding>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<scala.tools.version>2.11</scala.tools.version>
-		<scala.version>2.11.12</scala.version>
-		<scala.suffix>2.11</scala.suffix>
-		
+		<scala.tools.version>2.13</scala.tools.version>
+		<scala.version>2.13.6</scala.version>
+		<scala.suffix>2.13</scala.suffix>
+
 		<dependency.locations.enabled>false</dependency.locations.enabled>
 
-		<!-- finagle 6.12 might be needed for scray stateless services because 
+		<!-- finagle 6.12 might be needed for scray stateless services because
 			storehaus-memcached depends on it - need to test -->
 		<!-- <finagle.version>6.12.2</finagle.version> -->
-		<!-- finagle 6.15 fixes a bug with AbstractMethod error for DefaultServer 
+		<!-- finagle 6.15 fixes a bug with AbstractMethod error for DefaultServer
 			in bdq-scray-sil -->
 		<finagle.version>6.15.0</finagle.version>
 
@@ -78,13 +78,13 @@
 
 	<modules>
 		<module>scray-querying</module>
-		<module>scray-cassandra</module>
-		<module>scray-jdbc</module>
-		<module>scray-hdfs</module>
-		<module>scray-service</module>
+<!--		<module>scray-cassandra</module>-->
+<!--		<module>scray-jdbc</module>-->
+	 		<module>scray-hdfs</module>
+<!--		<module>scray-service</module>-->
 		<module>scray-common</module>
-		<module>scray-client-jdbc</module>
-		<module>scray-loader</module>
+<!--		<module>scray-client-jdbc</module>-->
+<!--		<module>scray-loader</module>-->
 	</modules>
 
 	<distributionManagement>
@@ -112,7 +112,7 @@
 		<dependency>
 			<groupId>org.scalatest</groupId>
 			<artifactId>scalatest_${scala.suffix}</artifactId>
-			<version>2.2.2</version>
+			<version>3.0.8</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -124,7 +124,7 @@
 		<dependency>
 			<groupId>com.typesafe.scala-logging</groupId>
 			<artifactId>scala-logging_${scala.suffix}</artifactId>
-			<version>3.5.0</version>
+			<version>3.9.2</version>
 		</dependency>
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
@@ -138,7 +138,7 @@
 			<dependency>
 				<groupId>com.twitter</groupId>
 				<artifactId>util-core_${scala.suffix}</artifactId>
-				<version>6.43.0</version>
+				<version>22.12.0</version>
 			</dependency>
 			<dependency>
 				<groupId>com.google.code.findbugs</groupId>
@@ -201,7 +201,7 @@
 					<failOnWarning>false</failOnWarning>
 					<sourceDirectory>${basedir}/src/main/scala</sourceDirectory>
 					<testSourceDirectory>${basedir}/src/test/scala</testSourceDirectory>
-					<configLocation>${project.basedir}/scalastyle_config.xml</configLocation> 
+					<configLocation>${project.basedir}/scalastyle_config.xml</configLocation>
 					<!-- <outputFile>${project.basedir}/target/scalastyle-output.xml</outputFile> -->
 					<outputEncoding>UTF-8</outputEncoding>
 				</configuration>
@@ -216,9 +216,15 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.7</version>
+				<version>3.0.0</version>
 				<configuration>
 					<skipTests>true</skipTests>
+                    			<argLine>
+                        			--add-opens java.base/java.lang=ALL-UNNAMED
+                        			--add-opens java.base/java.util=ALL-UNNAMED
+                        			--add-opens java.base/java.base=ALL-UNNAMED
+                        			--add-opens java.base/java.util.stream=ALL-UNNAMED
+                    			</argLine>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -230,7 +236,8 @@
 					<junitxml>.</junitxml>
 					<filereports>WDF TestSuite.txt</filereports>
 					<tagsToExclude>CassandraUp,SilUp</tagsToExclude>
-				</configuration>
+					<argLine> --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.base=ALL-UNNAMED --add-opens java.base/java.util.stream=ALL-UNNAMED</argLine>
+</configuration>
 				<executions>
 					<execution>
 						<id>test</id>
@@ -303,7 +310,7 @@
 			<name>Typesafe Repository</name>
 			<url>http://repo.typesafe.com/typesafe/releases/</url>
 		</repository>
-		<!-- <repository> <id>websudos.co.uk</id> <name>Websudos Repository</name> 
+		<!-- <repository> <id>websudos.co.uk</id> <name>Websudos Repository</name>
 			<url>http://maven.websudos.co.uk/ext-release-local</url> </repository> -->
 		<repository>
 			<id>sonatype.org</id>
@@ -328,7 +335,7 @@
 					<plugin>
 						<groupId>net.alchim31.maven</groupId>
 						<artifactId>scala-maven-plugin</artifactId>
-						<version>3.2.1</version>
+						<version>4.8.1</version>
 						<executions>
 							<execution>
 								<id>attach-javadocs</id>
@@ -389,7 +396,7 @@
 					<plugin>
 						<groupId>net.alchim31.maven</groupId>
 						<artifactId>scala-maven-plugin</artifactId>
-						<version>3.2.1</version>
+						<version>4.8.1</version>
 						<executions>
 							<execution>
 								<goals>
